fix video width on mobile

--- a/app/components/Home/Home.scss
+++ b/app/components/Home/Home.scss
@@ -63,32 +63,6 @@
   }
 }
 
-.home__benefits {
-  background-color: $white;
-  text-align: center;
-  .backbone-benefits {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-  }
-  h2 {
-    text-align: center;
-    margin-bottom: 65px;
-  }
-  i {
-    font-size: 55px;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  p {
-    font-size: 17px;
-    line-height: 1.6;
-    color: #57585a;
-  }
-}
-
 .home__product {
   background-color: $white;
   h1 {
@@ -120,11 +94,7 @@
 }
 
 .home__testimonials {
-  height: 450px;
   padding: 75px 0;
-  @media (max-width: $ipad) {
-    height: 600px;
-  }
   p {
     color: #57585a;
   }
@@ -142,6 +112,7 @@
   .testimonials-container {
     padding: 0 55px;
     div {
+      margin-top: 25px;
       height: 155px;
       padding: 30px;
       display: flex;
@@ -150,18 +121,22 @@
       background-color: $white;
       border: 1px solid $grey900;
     }
-    @media (max-width: $ipad) {
-      padding-bottom: 25px;
-    }
   }
 }
 
 .home__videos {
   background-color: $white;
-  padding: 25px;
+  padding: 75px 0;
   .video-container {
     height: 400px;
     background-color: $grey100;
+    @media (max-width: $ipad) {
+      margin-top: 15px;
+      height: 350px;
+    }
+    @media (max-width: $iphone6Plus) {
+      height: 240px;
+    }
     iframe {
       width: 100%;
       height: 100%;
